--- a/docs/style.css
+++ b/docs/style.css
@@ -1,3 +1,26 @@
+.foot {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  padding: 20px;
+  background-color: #e6e6e6;
+}
+
+.foot > ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  list-style: none;
+}
+
+.foot > ul > li > a > img {
+  height: 40px;
+}
+
+
+
 
 body {
   height:100%;
